--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>CDF project</description>
 	<properties>
 		<java.version>17</java.version>
+		<maven.compiler.source>1.17</maven.compiler.source>
+		<maven.compiler.target>1.17</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
