--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,3 @@
-#Configurations
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/cdf_app
-spring.datasource.username=root
-spring.datasource.password=kelonyambe
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
-
-#api
-spring.data.rest.basePath=/api
+# configs
+#spring.profiles.active=dev
+spring.profiles.active=prod
