--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,20 @@
 # Dev Configurations
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/cdf_app
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/cdf_mvp
 spring.datasource.username=root
 spring.datasource.password=kelonyambe
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
+
 #api
 spring.data.rest.basePath=/api
+server.port = 8090
+
+#keycloak
+keycloak.realm = CDF
+keycloak.auth-server-url = http://localhost:8080/
+keycloak.ssl-required = external
+keycloak.resource = cdf-backend
+keycloak.credentials.secret = 3D71gGtar8JEtJ8jOdc3nWoaXm7CmPGv
+keycloak.use-resource-role-mappings = true
