complete security setup on community development

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,9 +12,10 @@ spring.data.rest.basePath=/api
 server.port = 8090
 
 #keycloak
-keycloak.realm = CDF
+keycloak.realm = CDF DEMO
 keycloak.auth-server-url = http://localhost:8080/
 keycloak.ssl-required = external
 keycloak.resource = cdf-backend
-keycloak.credentials.secret = 3D71gGtar8JEtJ8jOdc3nWoaXm7CmPGv
+keycloak.credentials.secret = FlGpoGFfw8w8nvF2C62JbhiZBM7alMwM
 keycloak.use-resource-role-mappings = true
+
