--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 # Dev Configurations
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/cdf_mvp
 spring.datasource.username=root
 spring.datasource.password=kelonyambe
@@ -9,13 +9,13 @@ spring.jpa.show-sql: true
 
 #api
 spring.data.rest.basePath=/api
-server.port = 8090
+server.port = 8070
 
 #keycloak
-keycloak.realm = CDF DEMO
+keycloak.realm = CDF-DEMO
 keycloak.auth-server-url = http://localhost:8080/
 keycloak.ssl-required = external
 keycloak.resource = cdf-backend
-keycloak.credentials.secret = FlGpoGFfw8w8nvF2C62JbhiZBM7alMwM
+keycloak.credentials.secret = ySPNxL3UaeF0RZ8lZY2ov04o8z0B1pEr
 keycloak.use-resource-role-mappings = true
 
