Integrated email notification for rejected submissions

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,7 +6,6 @@ spring.datasource.password=kelonyambe
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
-
 #api
 spring.data.rest.basePath=/api
 server.port = 8070
@@ -18,4 +17,10 @@ keycloak.ssl-required = external
 keycloak.resource = cdf-backend
 keycloak.credentials.secret = ySPNxL3UaeF0RZ8lZY2ov04o8z0B1pEr
 keycloak.use-resource-role-mappings = true
+
+flowable.mail.server.host=smtp.gmail.com
+flowable.mail.server.port=587
+flowable.mail.server.username=knyambedev@gmail.com
+flowable.mail.server.password=avtbfbthnvznzpbo
+flowable.mail.server.use-tls=true
 
