edit email message

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -18,5 +18,10 @@ keycloak.resource = cdf-backend
 keycloak.credentials.secret = ySPNxL3UaeF0RZ8lZY2ov04o8z0B1pEr
 keycloak.use-resource-role-mappings = true
 
-
+#Flowable email
+flowable.mail.server.host=smtp.gmail.com
+flowable.mail.server.port=587
+flowable.mail.server.username=knyambedev@gmail.com
+flowable.mail.server.password=zrggcjrxeroqxkqz
+flowable.mail.server.use-tls=true
 
